# habitica

./: .gitignore  README.md  pyproject.toml
habitica/: core.py
