[project]
name = "habitica"
version = "0.0.17"
authors = [
  { name="Phil Adams", email="philadams.net@gmail.com" },
]
description = "Commandline interface to Habitica (http://habitica.com)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/philadams-zz/habitica"
Issues = "https://github.com/philadams-zz/habitica/issues"

[build-system]
requires = ["setuptools", "setuptools-scm", "docopt", "requests"]
build-backend = "setuptools.build_meta"

[project.scripts]
habitica = "habitica:cli"

[tool.setuptools.packages.find]
# All the following settings are optional:
#where = ["src"]  # ["."] by default
#include = ["mypackage*"]  # ["*"] by default
exclude = ['dist', 'tests']  # empty by default
#namespaces = false  # true by default
